fixed modal gallery and form fixed autoplay home-slider on mobile device

--- a/public/CSS/modal-menu.css
+++ b/public/CSS/modal-menu.css
@@ -34,7 +34,7 @@
 } */
 .modal-menu-gallery {
     width: 58%;
-    height: 40vh;
+    height: auto;
 }
 
 /* .modal-gallery.modal-menu-gallery .lSSlideOuter .lSPager.lSGallery img {
@@ -79,7 +79,7 @@
     #modal-contact-us-form .form-group {
         position: relative;
         display: block;
-        margin-bottom: 54px;
+        margin-bottom: calc((100%-758)/6);
     }
     #contact-us-form .form-group {
         position: relative;
@@ -99,6 +99,11 @@
         display: block;
         margin-bottom: 32px;
     }
+    #modal-contact-us-form .form-group {
+        position: relative;
+        display: block;
+        margin-bottom: calc((100%-758)/12) !important;
+    }
 
 }
 /* desktop_min*/
@@ -108,6 +113,11 @@
         display: flex;
         justify-content: flex-start;
     }
+    .modal-menu-gallery {
+        width: 600px;
+        height: 40vh;
+    }
+
     .lSSlideOuter .lSPager.lSGallery {
         width: 600px !important;
         display: flex;
@@ -122,7 +132,7 @@
     #modal-contact-us-form .form-group {
         position: relative;
         display: block;
-        margin-bottom: 18px;
+        margin-bottom: 20px;
     }
     #contact-us-form .form-group {
         width: 300px;
@@ -137,7 +147,7 @@
 @media only all and (min-width: 768px) and (max-width: 1023px) {
     .modal-menu {
         height: 100vh;
-        display: flex;
+        display: block;
         padding: 5% 5% 0 5%;
         flex-direction: column;
         justify-content: center;
@@ -161,7 +171,7 @@
 
     .modal-menu .inp {
         display: flex;
-        padding-top: 34%;
+        padding-top: 24%;
         padding-right: 0 !important;
         /* padding-left: 3%; */
     }
@@ -172,7 +182,7 @@
 
  
     .modal-menu-gallery {
-        width: 90%;
+        width: 100%;
         /* height: 40vh; */
     }
     .lSSlideOuter .lSPager.lSGallery {
@@ -182,12 +192,12 @@
     }
 
     .modal-gallery.modal-menu-gallery {
-        padding-top: 64%;
+        padding-top: 8%;
     }
 
   
     .modal-gallery.modal-menu-gallery>.lSSlideOuter {
-        height: 568px !important;
+        height: auto !important;
         background-repeat: no-repeat;
         background-size: 100% 100%;
         background-position: center;
